--- a/skeletonview/Resources/layout/mocklayout.xml
+++ b/skeletonview/Resources/layout/mocklayout.xml
@@ -9,17 +9,17 @@
         
         android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
-        android:background="#857c7b"
+        android:background="#e3e8e5"
         android:layout_width="40dp"
         android:layout_height="50dp"/>
         <View
         
-       android:background="#857c7b"
+       android:background="#e3e8e5"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="80dp"
        android:layout_gravity="center"
         
-        android:layout_width="60dp"
+        android:layout_width="200dp"
         android:layout_height="20dp"/>
 
 </LinearLayout>
